# rust-selenium

./: Cargo.toml  LICENSE  README.md
src/: actions.rs  browser.rs  capabilities.rs  chromeoptions.rs  element.rs  firefoxoptions.rs  lib.rs  proxy.rs  reqs.rs  safarioptions.rs  specialkey.rs  structs.rs  tests.rs
