[package]
name = "selenium_webdriver"
version = "0.1.5"
authors = ["Sergey Bibikov <sergey.bibikov.92@mail.ru>"]
edition = "2018"
description = "A crate to interact with the selenium server and write automated UI scripts and tests"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/selenium_webdriver/"
repository = "https://github.com/SergeyBibikov/rust-selenium"
keywords = ["selenium", "webdriver", "safari", "firefox", "chrome"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
base64 = "0.13.0"